# tinyml-cli

./: .gitignore  README.md  README_zh.md  build_linux.sh  build_macos.sh  build_windows.ps1  nas_sample_report.html  pyproject.toml  requirements.txt  test_report.html
.github/workflows/: release.yml  test-cli.yml
mmcli/: __init__.py  __main__.py  about.py  builder.py  cli.py  datasets.py  info.py  report.py
tests/: test_cli_integration.py  test_init.py  test_nas_builder.py  test_report.py  test_tier4_cli.py
